platform/cluster/flux/apps/edge/ingressroutes/frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: edge-system
  annotations:
    external-dns.alpha.kubernetes.io/target: v2.esa-blueshell.nl
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`v2.esa-blueshell.nl`) || Host(`www.v2.esa-blueshell.nl`)
      services:
        - name: frontend
          namespace: default
          port: 3000
  tls: {}
